# pycounts-dan

./: .buildinfo  CHANGELOG.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  temp.py
.github/workflows/: docs.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/pycounts/: index.rst.txt
_sources/autoapi/pycounts/plotting/: index.rst.txt
_sources/autoapi/pycounts/pycounts/: index.rst.txt
autoapi/: index.html
autoapi/pycounts/: index.html
autoapi/pycounts/plotting/: index.html
autoapi/pycounts/pycounts/: index.html
docs/: conf.py
pycounts/: README.md  pyproject.toml
pycounts/.github/workflows/: ci-cd.yml
pycounts/docs/: conf.py
pycounts/src/pycounts/: plotting.py  pycounts.py
src/pycounts/: pycounts.py
tests/: einstein.txt  test_pycounts.py
